Add Data Analysis Results

--- a/smartfarm_page/templates/kids_result.html
+++ b/smartfarm_page/templates/kids_result.html
@@ -565,7 +565,7 @@
                         <div class="jb-text_result" style="padding: 10px 100px; font-family: 'Jua', sans-serif;">
                             <center>
                                 {% if sc_hr == 1 and cal_km == 1 %}
-                                <h2 style="font-family: 'gyeonggi_medium';, sans-serif;"> 데이터 측정 결과 {{name}}어린이는 소근육보다 대근육이 활발히 발달된 상태입니다. <br>{{name}}어린이에게는 소근육운동을 추천합니다.</h2>
+                                <h2 style="font-family: 'gyeonggi_medium';, sans-serif;"> 『 데이터 측정 결과 {{name}}어린이는 소근육보다 대근육이 활발히 발달된 상태입니다. <br>{{name}}어린이에게는 소근육운동을 추천합니다. 』</h2>
                                 <img src="{% static 'smartfarm_page/assets/img/arrow.png' %}" width="50" height="50" alt="">
                                 <h2 style="font-family: 'gyeonggi_Light', sans-serif;">⚽ 소근육 발달에 좋은 운동 ⚽<br><br> ◎ 0~4세 : 공놀이, 전화기 놀이, 컵 잡기 놀이, 스펀지 비누 장난, 피아노 치기, 포크로 음식 찍기
                                     <br> ◎ 5~7세 : 단추 채우기, 인형 목욕시키기, 인형 옷 입히기, 공 주고받기, 가위로 종이 자르기</h2><br><br>
@@ -594,7 +594,7 @@
                                 </h2><div id="show_more_button" style="display:none;"><a id=show_button_count>&nbsp;닫기<br></a></div>
 
                                 {% elif sc_hr == 3 and cal_km == 3 %}
-                                <h2 style="font-family: 'gyeonggi_medium', sans-serif;"> 데이터 측정 결과 {{name}}어린이에게는 소근육과 대근육 발달에 필요한 운동을 추천합니다.</h2>
+                                <h2 style="font-family: 'gyeonggi_medium', sans-serif;"> 『 데이터 측정 결과 {{name}}어린이에게는 소근육과 대근육 발달에 필요한 운동을 추천합니다. 』</h2>
                                 <img src="{% static 'smartfarm_page/assets/img/arrow.png' %}" width="50" height="50" alt="">
                                 <h2 style="font-family: 'gyeonggi_Light', sans-serif;">⚽ 대근육 발달에 좋은 운동 ⚽<br><br> ◎ 0~4세 : 공굴리기, 마사지, 블록놀이, 물건 쌓고 무너뜨리기, 움직이는 사물 보여주기, 물장구 치기
                                     <br> ◎ 5~7세 : 눈 감고 서기, 손잡고 계단 오르내리기, 다양하게 걷기, 꼬리잡기 놀이, 달리기 경주, 자전거 타기</h2>
@@ -610,7 +610,7 @@
                                 </h2><div id="show_more_button" style="display:none;"><a id=show_button_count>&nbsp;닫기<br></a></div>
 
                                 {% elif sc_hr == 2 and cal_km == 2 %}
-                                <h2 style="font-family: 'gyeonggi_medium';, sans-serif;"> 데이터 측정 결과 {{name}}어린이는 대근육보다 소근육이 활발히 발달된 상태입니다. <br>{{name}}어린이에게는 대근육운동을 추천합니다.</h2>
+                                <h2 style="font-family: 'gyeonggi_medium';, sans-serif;"> 『 데이터 측정 결과 {{name}}어린이는 대근육보다 소근육이 활발히 발달된 상태입니다. <br>{{name}}어린이에게는 대근육운동을 추천합니다. 』</h2>
                                 <img src="{% static 'smartfarm_page/assets/img/arrow.png' %}" width="50" height="50" alt="">
                                 <h2 style="font-family: 'gyeonggi_Light', sans-serif;">⚽ 대근육 발달에 좋은 운동 ⚽<br><br> ◎ 0~4세 : 공굴리기, 마사지, 블록놀이, 물건 쌓고 무너뜨리기, 움직이는 사물 보여주기, 물장구 치기
                                     <br> ◎ 5~7세 : 눈 감고 서기, 손잡고 계단 오르내리기, 다양하게 걷기, 꼬리잡기 놀이, 달리기 경주, 자전거 타기</h2><br><br>
@@ -624,7 +624,7 @@
                                 </h2><div id="show_more_button" style="display:none;"><a id=show_button_count>&nbsp;닫기<br></a></div>
 
                                 {% elif sc_hr == 2 and cal_km == 3 %}
-                                <h2 style="font-family: 'gyeonggi_medium';, sans-serif;"> 데이터 측정 결과 {{name}}어린이는 대근육보다 소근육이 활발히 발달된 상태입니다. <br>{{name}}어린이에게는 대근육운동을 추천합니다.</h2>
+                                <h2 style="font-family: 'gyeonggi_medium';, sans-serif;"> 『 데이터 측정 결과 {{name}}어린이는 대근육보다 소근육이 활발히 발달된 상태입니다. <br>{{name}}어린이에게는 대근육운동을 추천합니다. 』</h2>
                                 <img src="{% static 'smartfarm_page/assets/img/arrow.png' %}" width="50" height="50" alt="">
                                 <h2 style="font-family: 'gyeonggi_Light', sans-serif;">⚽ 대근육 발달에 좋은 운동 ⚽<br><br> ◎ 0~4세 : 공굴리기, 마사지, 블록놀이, 물건 쌓고 무너뜨리기, 움직이는 사물 보여주기, 물장구 치기
                                     <br> ◎ 5~7세 : 눈 감고 서기, 손잡고 계단 오르내리기, 다양하게 걷기, 꼬리잡기 놀이, 달리기 경주, 자전거 타기</h2><br><br>
@@ -638,7 +638,7 @@
                                 </h2><div id="show_more_button" style="display:none;"><a id=show_button_count>&nbsp;닫기<br></a></div>
 
                                 {% elif sc_hr == 1 and cal_km == 2 or sc_hr == 1 and cal_km == 3 or sc_hr == 1 and cal_km == 4  or sc_hr == 3 and cal_km == 1 or sc_hr == 3 and cal_km == 4 or sc_hr == 4 and cal_km == 1 or sc_hr == 4 and cal_km == 2 or sc_hr == 4 and cal_km == 3 or sc_hr == 2 and cal_km == 1 or sc_hr == 2 and cal_km == 4  %}
-                                <h2 style="font-family: 'gyeonggi_medium', sans-serif;"> 데이터 측정 결과 {{name}}어린이는 적절하게 발달이 이루어진 상태입니다.<br>현재 적절히 발달이 되었다 하더라도 지속적인 관리가 필요합니다. <br>{{name}}어린이는 연령대별 권장 운동을 추천합니다.</h2>
+                                <h2 style="font-family: 'gyeonggi_medium', sans-serif;"> 『 데이터 측정 결과 {{name}}어린이는 적절하게 발달이 이루어진 상태입니다.<br>현재 적절히 발달이 되었다 하더라도 지속적인 관리가 필요합니다. <br>{{name}}어린이는 연령대별 권장 운동을 추천합니다. 』</h2>
                                 <img src="{% static 'smartfarm_page/assets/img/arrow.png' %}" width="50" height="50" alt="">
                                 <h2 style="font-family: 'gyeonggi_Light', sans-serif;">⚽ 연령대별 권장 운동 ⚽ <br><br>◎ 0~4세 : 신체활동의 즐거움이 커지도록 유도되어야 하며, 부모나 성인 보호자의 보호 아래서 자유로운 탐험활동을 할 수 있도록 해야 한다.
                                     <br>➱ 추천활동 : 동네 산책, 자유로운 실외 놀이 등<br>
@@ -653,13 +653,10 @@
                                     대근육이 발달한 유아가 몸의 균형을 잡을 수 있을 때 발달하는 영역이기도 합니다. 유아가 자신이 의도한 대로 손을 움직여 원하는 대상을 직접 탐색하고 시험해 보는 능력을 통해 발달 상태를 체크할 수 있습니다.
                                 </h2><div id="show_more_button" style="display:none;"><a id=show_button_count>&nbsp;닫기<br></a></div>
 
-
-
                                 {% endif %}
                             </center></div>
                     </div>
                 </div>
-
         </div>
     </div>
 </div>
